shared/css/toc.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/* XXX akita: Tidy up css */
.standalone-room-wrapper .toc-wrapper {
  width: calc(100% - 250px);
}

.toc-wrapper {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding: 20px;
}

.toc-wrapper.receiving-screen-share {
  display: none;
}

.toc-wrapper::after {
  content: "";
  display: block;
  width: 93px;
  height: 16px;
  background-image: url("../../shared/img/hello_logo.svg");
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  bottom: 20px;
}

.toc-wrapper > .toc-room-info-bar {
  text-align: left;
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.toc-wrapper > .toc-room-info-bar > .room-name {
  font-size: 16px;
  flex-grow: 2;
  font-family: sans-serif;
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] > button {
  border: solid 1px #ebebeb;
  background: rgba(51, 51, 51, 0.1);
  height: 30px;
  width: 30px;
  cursor: pointer;
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] {
  display: inline-block;
  position: relative;
  margin-left: 15px;
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] > button.add-url::after {
  content: url("../../shared/img/icons-16x16.svg#add-hover");
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] > button.add-url:hover::after {
  content: url("../../shared/img/icons-16x16.svg#add-active");
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] > button.settings::after {
  content: url("../../shared/img/icons-16x16.svg#settings-hover");
}

.toc-wrapper > .toc-room-info-bar > .room-actions-buttons > [class^="room-action"] > button.settings:hover::after {
  content: url("../../shared/img/icons-16x16.svg#settings-active");
}

.room-panel-add-url {
  position: absolute;
  right: 0;
  padding: 20px;
  box-shadow: 1px 2px 4px rgba(0,0,0,.4);
  width: 250px;
  background-color: #fff;
}

.room-panel-add-url > input {
  display: block;
  width: 100%;
}

.room-panel-add-url > button {
  width: 100%;
}

.toc-wrapper > .toc-room-info-bar > .room-active-users > .room-user,
.toc-wrapper > .room-toc > .toc-tile > .room-user {
  width: 30px;
  height: 30px;
  line-height: 30px;
  text-align: center;
  background-color: #333;
  color: #fff;
  border-radius: 50%;
  position: relative;
  display: inline-block;
  margin-left: 10px;
}

.toc-wrapper > .toc-room-info-bar > .room-active-users > .room-user:hover:after,
.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator:hover:after {
  background: #333;
  background: rgba(0,0,0,.8);
  border-radius: 5px;
  top: 37px;
  color: #fff;
  content: attr(data-name);
  position: absolute;
  z-index: 98;
  min-width: 120px;
  left: 50%;
  transform: translateX(-50%);
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator:hover:after {
  line-height: 20px;
  text-align: center;
  top: 28px;
}

.toc-wrapper > .toc-room-info-bar > .room-active-users > .room-user:hover:before,
.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator:hover:before {
  border: solid;
  border-color: #333 transparent;
  border-width: 0 6px 6px;
  top: 31px;
  content: "";
  left: 50%;
  position: absolute;
  z-index: 99;
  transform: translateX(-50%);
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator:hover:before {
  top: 22px;
}

.toc-item > .tile-delete-btn {
  background-color: #565656;
  border: 0;
  border-radius: 50%;
  cursor: pointer;
  height: 26px;
  width: 26px;
  position: absolute;
  right: -13px;
  top: -13px;
  transform: scale(0);
  opacity: 0;
  transition: transform 200ms, opacity 200ms;
}

.toc-item:hover > .tile-delete-btn {
  opacity: 1;
  transform: scale(1);
  transition-delay: 500ms;
}

.toc-item > .tile-delete-btn:after {
  content: url("../img/close-02.svg");
}

/* TOC items */

.toc-wrapper > .room-toc {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 30px;
  width: 100%;
}

.toc-item {
  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 3px;
  background: #fff;
  height: 264px;
  margin: 0 20px 20px 0;
  position: relative;
  transition: box-shadow 150ms;
  width: 218px;
}

.toc-item:hover {
  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1), 0 0 0 5px rgba(0, 0, 0, 0.1);
}

.toc-item > .toc-tile {
  background: #fff;
  display: block;
  height: 100%;
  text-decoration: none;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-icon {
  align-items: center;
  background-color:rgba(255, 255, 255, 0.8);
  border-radius: 3px;
  display: flex;
  flex-grow: 1;
  height: 40px;
  justify-content: center;
  left: 12px;
  overflow: hidden;
  position: absolute;
  top: 12px;
  width: 40px;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-icon > img {
  max-width: 32px;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-screenshot {
  display: block;
  height: 130px;
  width: 100%;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-info-wrapper {
  display: flex;
  flex-direction: column;
  font-size: 12px;
  height: 100%;
  justify-content: space-between;
  padding: 12px;
  text-align: left;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-info-wrapper > .tile-info {
  max-height: 86px;
  overflow: hidden;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-info-wrapper > .tile-info > .tile-title {
  color: #333;
  font-size: 14px;
  font-weight: bold;
  margin: 0 0 2px;
  word-wrap: break-word;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer {
  align-items: center;
  bottom: 0;
  display: flex;
  left: 0;
  padding: 12px;
  position: absolute;
  right: 0;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-info-wrapper > .tile-info > .tile-description {
  margin: 0;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-url {
  display: block;
  overflow: hidden;
  flex-grow: 2;
  margin-right: 10px;
  text-overflow: ellipsis;
  width: calc(200px - 20px);
  white-space: nowrap;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator {
  position: relative;
}

.toc-item > .toc-tile > .tile-wrapper > .tile-footer > .tile-creator > span {
  background: #a3a3a3;
  border-radius: 50%;
  color: #fff;
  display: block;
  height: 20px;
  line-height: 20px;
  text-align: center;
  width: 20px;
}

.screen {
  display: none;
  height: 100%;
  width: calc(100% - 250px);
  position: relative;
}

.screen > .screen-share {
  width: 100%;
  height: 100%;
}

.screen.focus-stream {
  display: flex;
}

.screen > .screen-share > .remote-video-box > .screen-share-video {
  width: 100%;
  height: 100%;
}

/* Snackbar */
.snackbar {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  line-height: 40px;
  z-index: 9025;
  color: #fff;
  transform: translateY(100%);
  transition: transform .3s ease 0s;
}

.snackbar > .snackbar-wrapper {
  display: flex;
  max-width: 200px;
  background-color: rgba(0,0,0,.8);
  padding: 0 24px;
  margin: auto;
}

.snackbar > .snackbar-wrapper > p {
  margin: 0;
}

.snackbar.open {
  transform: translateY(-14px);
}

